# rag-properties

./: .gitignore  CLAUDE.md  Dockerfile  README.md  nixpacks.toml  plan.md  skills-lock.json
.agents/skills/gemini-embedding-2/: SKILL.md
.agents/skills/gemini-embedding-2/evals/: evals.json
.agents/skills/gemini-embedding-2/references/: chromadb-integration.md  qdrant-integration.md  specifications.md
.claude/skills/: gemini-embedding-2
backend/: .env.example  config.py  main.py  pyproject.toml
backend/agent/: __init__.py  graph.py  prompt.py  session.py  state.py  tools.py
backend/embeddings/: base.py  gemini_multimodal_provider.py  gemini_provider.py  openai_provider.py  registry.py
backend/ingestion/: excel_loader.py  image_downloader.py  indexer.py  json_loader.py  location_normalizer.py  multimodal_indexer.py
backend/models/: multimodal_property.py  property.py
backend/search/: multimodal_searcher.py  query_parser.py  searcher.py
backend/vectorstore/: qdrant_manager.py
docs/: arquitectura-tecnica.md
frontend/: index.html  package-lock.json  package.json  vercel.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/analytics/: model-comparison.tsx  score-distribution.tsx  score-gauge.tsx  similarity-graph.tsx  timing-breakdown.tsx
frontend/src/components/chat/: chat-input.tsx  chat-message.tsx  chat-panel.tsx  chat-view.tsx  (+1 more)
frontend/src/hooks/: use-chat.ts  use-models.ts  use-multimodal-search.ts  use-search.ts
frontend/src/lib/: api.ts  chat-api.ts  multimodal-api.ts  utils.ts
frontend/src/types/: api.ts
(+13 files in other folders)
